<resources>
    <string name="app_name">Puzzle15</string>
    <string name="finish">Finish</string>
    <string name="restart">Restart</string>
    <string name="_25">25</string>
    <string name="score">Score</string>
    <string name="_00_12">00:12</string>
    <string name="time">Time</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_10">10</string>
    <string name="_11">11</string>
    <string name="_12">12</string>
    <string name="_13">13</string>
    <string name="_14">14</string>
    <string name="_15">15</string>
    <string name="_16">16</string>
    <string name="_0">0</string>
    <string name="moves">Moves</string>
    <string name="puzzle_15">Puzzle 15</string>
    <string name="play_now">Play Now</string>
    <string name="you_win">You Win!</string>
    <string name="ok">OK</string>
    <string name="result">Your result</string>
    <string name="settings">Settings</string>
    <string name="info">Info</string>
    <string name="best">Best</string>
    <string name="empty">-</string>
</resources>