<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical"
    tools:context=".ui.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="24dp"
        android:fontFamily="@font/jacky_boys"
        android:gravity="center"
        android:text="@string/puzzle_15"
        android:textColor="#A3FFFFFF"
        android:textSize="40sp"
        android:textStyle="bold" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:layout_gravity="center"
        android:saveEnabled="false">

        <RelativeLayout
            android:id="@+id/group_items"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn1"
                style="@style/item_button_view"
                android:layout_marginStart="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginBottom="2dp"
                android:text="@string/_1" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn2"
                style="@style/item_button_view"
                android:layout_margin="2dp"
                android:layout_toEndOf="@id/btn1"
                android:text="@string/_2" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn3"
                style="@style/item_button_view"
                android:layout_marginStart="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginBottom="2dp"
                android:layout_toEndOf="@id/btn2"
                android:text="@string/_3" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn4"
                style="@style/item_button_view"
                android:layout_marginStart="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginBottom="2dp"
                android:layout_toEndOf="@id/btn3"
                android:text="@string/_4" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn5"
                style="@style/item_button_view"
                android:layout_below="@id/btn3"
                android:layout_margin="2dp"
                android:text="@string/_5" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn6"
                style="@style/item_button_view"
                android:layout_below="@id/btn2"
                android:layout_margin="2dp"
                android:layout_toEndOf="@id/btn5"
                android:text="@string/_6" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn7"
                style="@style/item_button_view"
                android:layout_below="@id/btn3"
                android:layout_margin="2dp"
                android:layout_toEndOf="@id/btn6"
                android:text="@string/_7" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn8"
                style="@style/item_button_view"
                android:layout_below="@id/btn4"
                android:layout_margin="2dp"
                android:layout_toEndOf="@id/btn7"
                android:text="@string/_8" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn9"
                style="@style/item_button_view"
                android:layout_below="@id/btn5"
                android:layout_marginStart="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginBottom="2dp"
                android:text="@string/_9" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn10"
                style="@style/item_button_view"
                android:layout_below="@id/btn6"
                android:layout_margin="2dp"
                android:layout_toEndOf="@id/btn9"
                android:text="@string/_10" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn11"
                style="@style/item_button_view"
                android:layout_below="@id/btn7"
                android:layout_marginStart="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginBottom="2dp"
                android:layout_toEndOf="@id/btn10"
                android:text="@string/_11" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn12"
                style="@style/item_button_view"
                android:layout_below="@id/btn8"
                android:layout_margin="2dp"
                android:layout_toEndOf="@id/btn11"
                android:text="@string/_12" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn13"
                style="@style/item_button_view"
                android:layout_below="@id/btn9"
                android:layout_margin="2dp"
                android:text="@string/_13" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn14"
                style="@style/item_button_view"
                android:layout_below="@id/btn10"
                android:layout_margin="2dp"
                android:layout_toEndOf="@id/btn13"
                android:text="@string/_14" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn15"
                style="@style/item_button_view"
                android:layout_below="@id/btn11"
                android:layout_margin="2dp"
                android:layout_toEndOf="@id/btn14"
                android:text="@string/_15" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn16"
                style="@style/item_button_view"
                android:layout_below="@id/btn12"
                android:layout_margin="2dp"
                android:layout_toEndOf="@id/btn15"
                android:text="@string/_0" />

        </RelativeLayout>

    </FrameLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            >

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/play_now"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp"
                >


                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/btn_finish"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="start"
                    android:layout_marginEnd="16dp"
                    android:src="@drawable/play"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/play_now"
                    android:textColor="#A3FFFFFF"
                    android:textSize="28sp"
                    android:fontFamily="@font/jacky_boys"
                    android:textStyle="bold" />


            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp"
                >


                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/btn_settings"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="start"
                    android:layout_marginEnd="16dp"
                    android:src="@drawable/settings"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/settings"
                    android:textColor="#A3FFFFFF"
                    android:textSize="28sp"
                    android:gravity="end"
                    android:fontFamily="@font/jacky_boys"
                    android:textStyle="bold" />


            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp"
                >

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/btn_info"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="start"
                    android:layout_marginEnd="16dp"
                    android:src="@drawable/info"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/info"
                    android:textColor="#A3FFFFFF"
                    android:textSize="28sp"
                    android:fontFamily="@font/jacky_boys"
                    android:textStyle="bold" />


            </androidx.appcompat.widget.LinearLayoutCompat>

        </LinearLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>